--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -4,7 +4,10 @@ body {
   font-family: $font-family-default;
   font-size: $font-size-200;
   color: $color-text-default;
-  background-color: $color-background-dark;
+
+  &.no-scroll {
+    overflow: hidden;
+  }
 }
 
 .h-wrapper {
