--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -3,6 +3,7 @@
 body {
   font-family: $font-family-default;
   font-size: $font-size-200;
+  font-weight: 400;
   color: $color-text-default;
 
   &.no-scroll {
@@ -19,4 +20,5 @@ h2,
 h3,
 h4 {
   font-family: $font-family-headings;
+  font-weight: 300;
 }
