--- a/scss/components/_article.scss
+++ b/scss/components/_article.scss
@@ -2,7 +2,7 @@
 
 .article {
   width: 100%;
-  padding: 9.6rem 2.4rem 9.6rem;
+  padding: 9.6rem 2.4rem 0;
 
   @include breakpoint-up(large) {
     @include center-block;
@@ -56,8 +56,6 @@
         margin: {
           bottom: 1.6rem;
         }
-        font-size: $font-size-400;
-        line-height: 3.2rem;
       }
 
       p {
@@ -70,8 +68,6 @@
           margin: {
             bottom: 2.5rem;
           }
-          font-size: $font-size-600;
-          line-height: 4.8rem;
         }
       }
     }
