--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -102,7 +102,7 @@
 
   @include breakpoint-down(xsmall) {
     position: absolute;
-    bottom: 2.2rem;
+    bottom: 0;
     left: 50%;
     transform: translateX(-50%);
   }
