--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -66,7 +66,7 @@
       }
     }
 
-    @include breakpoint-up(large) {
+    @include breakpoint-up(medium) {
       padding: 3.7rem 3.9rem 2.7rem;
       max-width: 65.2rem;
 
