--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -47,7 +47,7 @@
         position: absolute;
         bottom: -1rem;
         left: 0;
-        transform: scale(0);
+        transform: scaleX(0);
         transform-origin: left;
         width: 100%;
         height: 1px;
@@ -56,7 +56,7 @@
       }
 
       &:hover::after {
-        transform: scale(1);
+        transform: scaleX(1);
       }
 
       @include breakpoint-down(small) {
