--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -48,7 +48,7 @@
         position: absolute;
         bottom: -1.2rem;
         left: 1.5rem;
-        transform: scale(0);
+        transform: scaleX(0);
         width: 2.4rem;
         height: 0.2rem;
         background-color: $color-background-default;
@@ -56,7 +56,7 @@
       }
 
       &:hover::after {
-        transform: scale(1);
+        transform: scaleX(1);
       }
     }
 
