--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -3,4 +3,94 @@
 .footer {
   padding: 5.6rem 5.1rem;
   background-color: $color-background-dark;
+
+  & &__container {
+    margin: {
+      left: 0.1rem;
+    }
+
+    .f-right {
+      margin: {
+        bottom: 4.8rem;
+      }
+    }
+
+    .footer__logo {
+      display: block;
+      margin: {
+        bottom: 3.2rem;
+      }
+      @include center-block;
+      max-width: 14.4rem;
+      width: 100%;
+      height: 2.4rem;
+      @include cover-background("../assets/logo.svg");
+    }
+
+    .footer__links {
+      span {
+        margin: {
+          bottom: 1.6rem;
+        }
+        text-align: center;
+        @include breakpoint-down(xsmall) {
+          display: block;
+        }
+
+        .header-nav-link {
+          margin: {
+            right: 0.1rem;
+          }
+          font-size: $font-size-200;
+          line-height: 2.5rem;
+          color: $color-text-light;
+        }
+      }
+    }
+
+    .footer__social {
+      margin: {
+        bottom: 1.2rem;
+      }
+      text-align: center;
+
+      a {
+        position: relative;
+        display: inline-block;
+        min-width: 2.4rem;
+        min-height: 2.4rem;
+
+        &:not(:last-child) {
+          margin: {
+            right: 1.2rem;
+          }
+        }
+
+        &::after {
+          content: "";
+          position: absolute;
+          bottom: -0.8rem;
+          left: 0;
+          transform: scaleX(0);
+          background-color: $color-background-default;
+          width: 100%;
+          height: 0.2rem;
+          transition: transform 300ms ease;
+        }
+
+        &:hover::after {
+          transform: scaleX(1);
+        }
+        vertical-align: middle;
+      }
+    }
+
+    .footer__copyright {
+      .copyright-text {
+        font-size: $font-size-200;
+        line-height: 2.5rem;
+        color: $color-text-subtle;
+      }
+    }
+  }
 }
