--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -4,6 +4,13 @@
   padding: 5.6rem 5.1rem;
   background-color: $color-background-dark;
 
+  @include breakpoint-up(medium) {
+    padding: {
+      top: 4.3rem;
+      bottom: 4.3rem;
+    }
+  }
+
   & &__container {
     margin: {
       left: 0.1rem;
@@ -13,11 +20,23 @@
       display: flex;
       align-items: flex-start;
       justify-content: space-between;
+      @include center-block;
+      margin: {
+        top: 0.1rem;
+      }
+      max-width: 111rem;
+      width: 100%;
     }
 
     .f-right {
       margin: {
         bottom: 4.8rem;
+      }
+
+      @include breakpoint-up(medium) {
+        margin: {
+          bottom: 0;
+        }
       }
     }
 
@@ -31,6 +50,10 @@
       width: 100%;
       height: 2.4rem;
       @include cover-background("../assets/logo.svg");
+
+      @include breakpoint-up(medium) {
+        margin: 0 0 2.4rem;
+      }
     }
 
     .footer__links {
@@ -39,7 +62,7 @@
           bottom: 1.6rem;
         }
         text-align: center;
-        @include breakpoint-down(xsmall) {
+        @include breakpoint-down(small) {
           display: block;
         }
 
@@ -55,7 +78,7 @@
           &::after {
             content: "";
             position: absolute;
-            bottom: -0.8rem;
+            bottom: -1.2rem;
             left: 50%;
             transform: translateX(-50%) scaleX(0);
             width: 2.4rem;
@@ -68,6 +91,13 @@
             transform: translateX(-50%) scaleX(1);
           }
         }
+
+        @include breakpoint-up(medium) {
+          margin: {
+            right: 2.8rem;
+            bottom: 0;
+          }
+        }
       }
     }
 
@@ -75,7 +105,12 @@
       margin: {
         bottom: 1.2rem;
       }
-      text-align: center;
+
+      @include breakpoint-up(medium) {
+        margin: {
+          bottom: 2rem;
+        }
+      }
 
       a {
         position: relative;
@@ -92,7 +127,7 @@
         &::after {
           content: "";
           position: absolute;
-          bottom: -0.8rem;
+          bottom: -0.6rem;
           left: 0;
           transform: scaleX(0);
           background-color: $color-background-default;
@@ -109,12 +144,25 @@
     }
 
     .footer__copyright {
-      text-align: center;
-
       .copyright-text {
         font-size: $font-size-200;
         line-height: 2.5rem;
         color: $color-text-subtle;
+      }
+
+      @include breakpoint-up(medium) {
+        margin: {
+          right: 0.1rem;
+        }
+      }
+    }
+
+    .footer__social,
+    .footer__copyright {
+      text-align: center;
+
+      @include breakpoint-up(medium) {
+        text-align: right;
       }
     }
   }
